--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -16,28 +16,15 @@
         <li><a href="#">Messages</a></li>
       </ul>
 
-      <form class="navbar-form navbar-right">
+      <form #loginForm="ngForm" class="navbar-form navbar-right" (ngSubmit)="login()" >
         <div class="form-group">
-          <input type="text" placeholder="Username" required name="username" class="form-control">
+          <input type="text" #username="ngModel" placeholder="Username" required name="username" class="form-control" [(ngModel)]="model.username">
         </div>
         <div class="form-group">
-          <input type="password" placeholder="Password" required name="password" class="form-control">
+          <input type="password" #password="ngModel" placeholder="Password" required name="password" class="form-control" [(ngModel)]="model.password">
         </div>
-        <button type="submit" class="btn btn-success">Sign in</button>
+        <button type="submit" [disabled]="!loginForm.valid" class="btn btn-success">Sign in</button>
       </form>
-
-      <ul class="nav navbar-nav navbar-right">
-        <li><a>Logout</a></li>
-        <li class="dropdown">
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" 
-            aria-haspopup="true" aria-expanded="false">Welcome User <span class="caret"></span></a>
-          <ul class="dropdown-menu">
-            <li><a href="#"><i class="fa fa-user"></i> Edit Profile</a></li>
-            <li role="separator" class="divider"></li>
-            <li><a><i class="fa fa-sign-out"></i> Logout</a></li>
-          </ul>
-        </li>
-      </ul>
 
     </div><!--/.navbar-collapse -->
   </div>
