--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -11,9 +11,9 @@
     </div>
     <div id="navbar" class="navbar-collapse collapse">
       <ul class="nav navbar-nav" *ngIf="loggedIn()">
-        <li><a [routerLink]="['/members']">Matches</a></li>
-        <li><a [routerLink]="['/lists']">Lists</a></li>
-        <li><a [routerLink]="['/messages']">Messages</a></li>
+        <li routerLinkActive="active"><a [routerLink]="['/members']">Matches</a></li>
+        <li routerLinkActive="active"><a [routerLink]="['/lists']">Lists</a></li>
+        <li routerLinkActive="active"><a [routerLink]="['/messages']">Messages</a></li>
       </ul>
 
       <form *ngIf="!loggedIn()" #loginForm="ngForm" class="navbar-form navbar-right" (ngSubmit)="login()" >
