Persist member updates

--- a/src/app/members/member-edit/member-edit.component.html
+++ b/src/app/members/member-edit/member-edit.component.html
@@ -61,7 +61,7 @@
             </form>
           </tab>
 
-          <tab heading="Edit Profile">
+          <tab heading="Edit Photos">
             <p>Edit photos will go here</p>
           </tab>
         </tabset>
