--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -16,17 +16,20 @@
         <li routerLinkActive="active"><a [routerLink]="['/messages']">Messages</a></li>
       </ul>
 
-      <form *ngIf="!loggedIn()" #loginForm="ngForm" class="navbar-form navbar-right" (ngSubmit)="login()" >
+      <form *ngIf="!loggedIn()" #loginForm="ngForm" class="navbar-form navbar-right" (ngSubmit)="login()">
         <div class="form-group">
-          <input type="text" #username="ngModel" placeholder="Username" required name="username" class="form-control" [(ngModel)]="model.username">
+          <input type="text" #username="ngModel" placeholder="Username" class="form-control" required name="username" [(ngModel)]="model.username">
         </div>
         <div class="form-group">
-          <input type="password" #password="ngModel" placeholder="Password" required name="password" class="form-control" [(ngModel)]="model.password">
+          <input type="password" #password="ngModel" placeholder="Password" class="form-control" required name="password" [(ngModel)]="model.password">
         </div>
         <button type="submit" [disabled]="!loginForm.valid" class="btn btn-success">Sign in</button>
       </form>
 
       <ul *ngIf="loggedIn()" class="nav navbar-nav navbar-right">
+        <li>
+          <img src="{{photoUrl}}" alt="">
+        </li>
         <li class="dropdown" dropdown>
           <a (click)="false" class="dropdown-toggle" dropdownToggle>Welcome {{authService.decodedToken?.unique_name | titlecase}} <span class="caret"></span></a>
           <ul class="dropdown-menu" *dropdownMenu>
